# what-bin-is-it

./: Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  build-for-x64-linux.sh  build_image.sh  deploy_binary_to_host.sh  deploy_to_host.sh  docker-compose.yml  run.sh
.github/workflows/: rust.yml
.sqlx/: query-9bdf9c95d51abed18ab39a8cbcb47d46bba6f86025cb7b7ef3365c116f1531d3.json  query-b286a2be438b4af0ae7cfc4e6a3885a72ec4db61ef196e9d2c23a35381be8d63.json
bin_stuff/: Cargo.toml
bin_stuff/src/: lib.rs
email_sender/: Cargo.toml
email_sender/src/: main.rs
migrations/: 20230819182726_create_emails_table.sql
scraper/: Cargo.toml  lib.rs
server/: Cargo.toml
server/src/: email_sender.rs  main.rs
services/: geckodriver.service  whatbin.service
src/: main.rs  scraper.rs
utility-scripts/: view-logs.sh
