[package]
name = "what-bin-is-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-sesv2 = "0.28.0"
chrono = "0.4.26"
dotenv = "0.15.0"
fantoccini = {version = "0.19.3", features = ["rustls-tls"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
