[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-sesv2 = "0.28.0"
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.26"
dotenv = "0.15.0"
fantoccini = {version = "0.19.3", features = ["rustls-tls"] }
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }

bin_stuff = { path = "../bin_stuff" }
